[gd_scene load_steps=9 format=3 uid="uid://cjhfu7ih7xdrr"]

[ext_resource type="Script" path="res://src/scripts/Lesson/Semining/Semining_1.11.gd" id="1_btrjh"]
[ext_resource type="Texture2D" uid="uid://byio0luq7uppw" path="res://assets/images/Background/StarField.png" id="2_ch3sv"]
[ext_resource type="PackedScene" uid="uid://c7pggom3bb7tm" path="res://src/scenes/Components/ZoomableImage.tscn" id="3_0c4bo"]
[ext_resource type="Texture2D" uid="uid://tiogluklkili" path="res://assets/images/Lesson/Prelim/prelim_1.2.png" id="4_fy7it"]
[ext_resource type="Texture2D" uid="uid://2dvc6j7vcrfl" path="res://assets/images/Lesson/Semining/Semining_11.1.png" id="5_ctvo7"]
[ext_resource type="Texture2D" uid="uid://b4jkt48j8t28b" path="res://assets/images/Lesson/Semining/Semining_11.2.png" id="6_5rxhv"]
[ext_resource type="PackedScene" uid="uid://c8lo8combalxg" path="res://src/scenes/Components/NavigationControls.tscn" id="7_xuc5q"]
[ext_resource type="PackedScene" uid="uid://r7v4w30c0k7l" path="res://src/scenes/Components/Pause.tscn" id="8_2mqi1"]

[node name="Semining1_11" type="Node2D"]
script = ExtResource("1_btrjh")

[node name="StarField" type="Sprite2D" parent="."]
position = Vector2(963.999, 541.998)
scale = Vector2(1.88281, 1.05859)
texture = ExtResource("2_ch3sv")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 68.0
offset_top = 220.0
offset_right = 1868.0
offset_bottom = 1077.0
theme_override_constants/separation = 30

[node name="Header" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 80
text = "Rich Text"
fit_content = true

[node name="DetailOne" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailTwo" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailThree" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailFour" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailFive" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailSix" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="DetailSeven" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Rich Text"
fit_content = true

[node name="ZoomableImage" parent="." instance=ExtResource("3_0c4bo")]
scale = Vector2(1.0036, 1.00362)
image_texture = ExtResource("4_fy7it")
image_textures = Array[Texture2D]([ExtResource("5_ctvo7"), ExtResource("6_5rxhv")])
metadata/_edit_use_anchors_ = true

[node name="ImageContainer" parent="ZoomableImage" index="0"]
offset_left = 0.0
offset_top = -8.96754
offset_right = 1920.0
offset_bottom = 1071.03

[node name="VBoxContainer" parent="ZoomableImage/ImageContainer" index="0"]
grow_horizontal = 2
grow_vertical = 2

[node name="FullScreenOverlay" parent="ZoomableImage" index="1"]
visible = false

[node name="NavigationControls" parent="." instance=ExtResource("7_xuc5q")]
visible = false
previous_scene_path = "res://src/scenes/Lesson/Semining/Semining_1.10.tscn"

[node name="Pause" parent="." instance=ExtResource("8_2mqi1")]

[editable path="ZoomableImage"]
